--- a/index.html
+++ b/index.html
@@ -4,8 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First Assignment</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;800&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <header>
+        <div class="banner"> 
+            <h1 class="banner-text">Let's make beautiful <br> flowers a part of your <br> life.
+            </h1>
+            <p class="banner-p">It is a long established fact that a reader will be distracted by the readable content of a page <br> when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal <br> distribution of letters.
+            </p>
+            <button class="banner-btn"> Shop Now </button>
+            <div>
+               <img class="banner-img" src="Flower Asset/pngwing 10.png" alt="">
+            </div>
+         </div>
+    </header>
+    <main>
+       <div>
+        <h2 class="featured">Our Featured Flowers</h2>
+        <p class="featured-p">It is a long established fact that a <br> reader will be distracted by the <br> readable content of a page when looking <br> at its layout.</p>
+        <img class="img1" src="Flower Asset/pngwing 6.png" alt="">
+        <img class="img2" src="Flower Asset/pngwing 5.png" alt="">
+        <img src="Flower Asset/pngwing 7.png" alt="">
+       </div>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
