--- a/index.html
+++ b/index.html
@@ -24,13 +24,23 @@
          </div>
     </header>
     <main>
-       <div>
-        <h2 class="featured">Our Featured Flowers</h2>
-        <p class="featured-p">It is a long established fact that a <br> reader will be distracted by the <br> readable content of a page when looking <br> at its layout.</p>
-        <img class="img1" src="Flower Asset/pngwing 6.png" alt="">
-        <img class="img2" src="Flower Asset/pngwing 5.png" alt="">
-        <img src="Flower Asset/pngwing 7.png" alt="">
-       </div>
+       <div class="f-conten">
+         <h2 class="featured">Our Featured Flowers</h2>
+          <p class="featured-p">It is a long established fact that a <br> reader will be distracted by the <br> readable content of a page when looking <br> at its layout.</p>
+
+          <div class="Flower">
+             <div>
+              <img class="img1" src="Flower Asset/pngwing 6.png" alt=""> 
+              </div>
+              <div>
+                <img class="img2" src="Flower Asset/pngwing 5.png" alt="">  
+              </div>
+              <div>
+                <img src="Flower Asset/pngwing 7.png" alt="">
+              </div>
+         </div>
+        </div>
+
     </main>
     <footer>
 
