--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
                 <img src="Flower Asset/pngwing 7.png" alt="">
               </div>
          </div>
+         <div class="img-name">
+            <p class="pic1">Pink Flower Tree </p>
+            <p class="pic2">Pink Flower Tree</p>
+            <p class="pic3">Pink Flower Tree</p>
+
+        </div>
         </div>
 
     </main>
